<resources>
    <string name="app_name">Throw Dice and Try Your Luck</string>
    <string name="button_label_throw_dice">Throw Dice</string>
    <string name="label_dice_1">Dice 1</string>
    <string name="label_dice_2">Dice 2</string>
    <string name="main_dice">Main Page Dice</string>
    <string name="dices">DICES</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="let_s_play">Let\'s play!</string>
    <string name="register_input_placeholder_enter_your_name">Enter your name</string>
    <string name="play">Play</string>
</resources>