<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dicesBackgroundMain"
        android:layout_width="178dp"
        android:layout_height="124dp"
        android:contentDescription="@string/main_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_purple_dice" />

    <ImageView
        android:id="@+id/dice1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/label_dice_1"
        app:layout_constraintBottom_toTopOf="@+id/btnThrowDice"
        app:layout_constraintEnd_toStartOf="@+id/dice2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dicesBackgroundMain"
        app:layout_constraintVertical_bias="0.557"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/dice2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/dices"
        app:layout_constraintBottom_toTopOf="@+id/btnThrowDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dice1"
        app:layout_constraintTop_toBottomOf="@+id/dicesBackgroundMain"
        app:layout_constraintVertical_bias="0.557"
        app:srcCompat="@drawable/dice_1" />

    <TextView
        android:id="@+id/textViewPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/dice2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewPlayer1"
        app:layout_constraintTop_toBottomOf="@+id/dicesBackgroundMain"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/textViewPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/dice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewPlayer2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dicesBackgroundMain"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/btnThrowDice"
        android:layout_width="167dp"
        android:layout_height="79dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/button_label_throw_dice"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dicesBackgroundMain"
        app:layout_constraintVertical_bias="0.807" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_play"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnThrowDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dicesBackgroundMain"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/textViewPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dicesBackgroundMain"
        app:layout_constraintVertical_bias="0.144" />

</androidx.constraintlayout.widget.ConstraintLayout>