<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark"
    android:contentDescription="@string/register_input_placeholder_enter_your_name"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/dicesBackgroundRegister"
        android:layout_width="178dp"
        android:layout_height="124dp"
        android:contentDescription="@string/main_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_purple_dice" />


    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/register_input_placeholder_enter_your_name"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="167dp"
        android:layout_height="79dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/play"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
        app:layout_constraintVertical_bias="0.566" />

</androidx.constraintlayout.widget.ConstraintLayout>